--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,30 +14,24 @@
  *= require_self
  */
 
- /*
-@import "bootstrap-sprockets";
-@import "bootstrap";
-*/
+// Reset everything
+html, body, div, a {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline; }
 
+html {
+  line-height: 1; }
 
-/*
-.myNavBackground{
-  background-color: #202020;
-  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
-
-}
-
-
-*/
-
-
-
-
-
+body {
+    font-family: "Unica One";
+    font-size: 1.5em;
+    text-shadow: 0 1px 0 white; }
 
 .Logo{
-  margin: 40px 0px 10px 0px;
-  background-color: #FFFFFF;
   font-family: Impact;
   font-size: 128px;
   font-weight: 500;
@@ -47,6 +41,68 @@
   text-align: center;
 
 }
+
+// Navigation bar
+.nav {
+    text-align: center;
+    overflow: hidden;
+    margin: 1em auto;
+    width: 600px;
+    height: 55px;
+    position: relative;
+}
+
+.nav a {
+    display: block;
+    position: relative;
+    vertical-align: middle;
+    float: left;
+    width: 24%;
+	text-decoration: none;
+	color: #393939;
+	-webkit-transition: .7s;
+	-moz-transition: .7s;
+	-o-transition: .7s;
+	-ms-transition: .7s;
+	transition: .7s; }
+
+.nav a:hover {
+	color: #c6342e;
+  background-color: white;
+
+}
+
+.mid-child {
+    border-right: groove black;
+    border-right-width: 0.1em;
+}
+
+.nav .effect {
+  width: 90px;
+  height: 2px;
+  bottom: 25px;
+  background: #c6342e;
+  box-shadow: 0 1px 0 white; 
+  margin-left:-45px;
+    position: absolute;
+  left: -12.5%;
+  -webkit-transition: 0.7s ease-in-out;
+  -moz-transition: 0.7s ease-in-out;
+  -o-transition: 0.7s ease-in-out;
+  -ms-transition: 0.7s ease-in-out;
+  transition: 0.7s ease-in-out; }
+
+	.nav a:nth-child(1):hover ~ .effect {
+	  left: 12%; }
+	.nav a:nth-child(2):hover ~ .effect {
+	  left: 36%; }
+	.nav a:nth-child(3):hover ~ .effect {
+	  left: 60%; }
+	.nav a:nth-child(4):hover ~ .effect {
+	  left: 84%;
+}
+
+
 .Logo a {
   color: #080808;
   text-shadow: -1px 0 #F8F8F8, 0 1px #F8F8F8, 1px 0 #F8F8F8, 0 -1px #F8F8F8;
@@ -198,3 +254,4 @@
     font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
     background-color: #FFFFFF;
 }
+
