Added two hover-menus for profile & bathroom

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,6 +88,7 @@
   font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
   background-color: #F8F8F8;
   border-top: solid #E8E8E8 ;
+  border-bottom: solid #E8E8E8 ;
 }
 
 
@@ -96,6 +97,7 @@
   float: left;
   color: #202020;
   background-color: #F8F8F8;
+  max-height: 52px;
 }
 .myNavElementsRight a {
   padding: 15px 15px 15px 15px;
@@ -117,6 +119,7 @@
   font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
   background-color: #F8F8F8;
   border-top: solid #E8E8E8 ;
+  border-bottom: solid #E8E8E8 ;
 }
 
 
