--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -88,3 +88,9 @@ just for appearance; change whatever you want
 }
 .slide:nth-of-type(5){
 }
+
+.Condom{
+  margin: 25px 50px 25px 50px;
+  background-color: #FFFFFF;
+
+}
