--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,6 +27,63 @@
     </div>
   </nav>
 -->
+
+<style>
+.dropbtn {
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
+    cursor: pointer;
+        border: none;
+}
+
+
+.dropdown {
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+    position: relative;
+    display: inline-block;
+        border: none;
+}
+
+.dropdown-content {
+    z-index: 3;
+    display: none;
+    position: absolute;
+    min-width: 160px;
+        border: none;
+}
+
+.dropdown-content a {
+    text-decoration: none;
+    display: block;
+        border: none;
+}
+
+.dropdown-content a:hover {
+    border: none;
+}
+
+.dropdown:hover .dropdown-content {
+      border: none;
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+      border: none;
+}
+
+button::-moz-focus-inner {
+    border:0;
+    padding:0;
+    margin-top:-2px;
+    	margin-bottom: -2px;
+}
+
+</style>
+
+
+
+
 <br>
 
 <ul class="TopRight">
@@ -56,19 +113,43 @@
             <div class = "myNavElementsLeft"> <li> <%= link_to 'UrineLuck', '#' %>  </li>                  </div>
         -->
 
-        <div class= "myNavElementsRight"> <li><%= link_to 'HOME', home_path %></li>                      </div>
-        <div class= "myNavElementsRight"> <li><%= link_to 'PROFILE', edit_user_registration_path %></li>                </div>
-        <div class= "myNavElementsRight"> <li><%= link_to 'ADD BATHROOM', newbath_path %></li>         </div>
-        <div class= "myNavElementsRight"> <li><%= link_to 'MAP', showmap_path %></li>                    </div>
-        <div class= "myNavElementsRight"> <li><%= link_to "Deleteable", change_path %></li></div>
 
-        <% if !user_signed_in? %>
-        <div class= "myNavElementsLeftRight"> <li><%= link_to 'Log In', new_user_session_path%></li>         </div>
+                    <div class= "myNavElementsRight"> <li><%= link_to 'HOME', home_path %></li>                      </div>
 
-        <div class= "myNavElementsLeftRight"> <li><%= link_to 'Sign Up', new_user_registration_path %></li>  </div>
-        <% else %>
-        <div class= "myNavElementsLeftRight"><li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li></div>
-        <% end %>
+                    <div class= "myNavElementsRight">
+                    <li>
+                    <div class="dropdown">
+                      <button class="dropbtn"> <%= link_to 'PROFILE', edit_user_registration_path %> </button>
+                      <div class="dropdown-content">
+                        <%= link_to 'Personal Settings', edit_user_registration_path %>
+                        <%= link_to "Security Settings", change_path %>
+                      </div>
+                    </div>
+                    </li>
+                    </div>
+
+                    <div class= "myNavElementsRight"> <li><%= link_to 'MAP', showmap_path %></li>                    </div>
+
+                    <div class= "myNavElementsRight">
+                    <li>
+                    <div class="dropdown">
+                      <button class="dropbtn"> <li><%= link_to 'BATHROOM', newbath_path %> </button>
+                      <div class="dropdown-content">
+                        <%= link_to 'Add A Bathroom', createbath_path %>
+                        <%= link_to "All Bathrooms", showbath_path %>
+                      </div>
+                    </div>
+                    </li>
+                    </div>
+
+
+                    <% if !user_signed_in? %>
+                    <div class= "myNavElementsLeftRight"> <li><%= link_to 'Log In', new_user_session_path%></li>         </div>
+
+                    <div class= "myNavElementsLeftRight"> <li><%= link_to 'Sign Up', new_user_registration_path %></li>  </div>
+                    <% else %>
+                    <div class= "myNavElementsLeftRight"><li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li></div>
+                    <% end %>
   </ul>
 <p> </p>
 <!--
