--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -8,8 +8,8 @@
 
 
 
-<div style='width: 1000px;'>
-  <div id="map" style='width: 1000px; height: 500px;'></div>
+<div style='width: 100%;'>
+  <div id="map" style='width: 100%; height: 500px;'></div>
 </div>
 
 <script type="text/javascript">
@@ -50,4 +50,3 @@ handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
 });
 
 </script>
-
