wont let me pull

--- a/app/views/baths/requests.html.erb
+++ b/app/views/baths/requests.html.erb
@@ -41,7 +41,7 @@
                             <% if bath.admin_accept == true %>
                                 <td><b><font color="green">Approved</font></b></td>
                             <% else %>
-                                <td><b><font color="red">Pending/Denied</font></b></td>
+                                <td><b><font color="red">Pending</font></b></td>
                             <% end %>
                         </tr>
                         
