--- a/app/views/baths/edit.html.erb
+++ b/app/views/baths/edit.html.erb
@@ -48,6 +48,10 @@
                             <%= f.submit "Submit", class: "button small radius" %>
                             <% end %></td>
                         </tr>
+                        
+                        <tr>
+                            <th><%= link_to "Destroy", bath, method: :delete, data: { confirm: "You sure?" } %></th>
+                        </tr>
                     </table>
             
             
