--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -42,11 +42,19 @@
 // });
 
 
-handler = Gmaps.build('Google');
-handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-  markers = handler.addMarkers(<%=raw @hash.to_json %>);
-  handler.bounds.extendWith(markers);
-  handler.fitMapToBounds();
-});
+  var mapOptions = 
+  {
+    maxZoom:14,
+    minZoom:10,
 
+  };
+
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: mapOptions, internal: {id: 'map'}}, function(){
+    markers = handler.addMarkers(<%=raw @hash.to_json %>);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+  
+   
 </script>
