--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,4 +1,20 @@
-body {
+/* Reset everything */
+html, body, div, a {
+  margin: 0;
+	padding: 0;
+	border: 0;
+	font: inherit;
+	font-size: 100%;
+	vertical-align: baseline;
+	text-decoration: none;
+  text-shadow: none;
+}
+
+html {
+	line-height: 1;
+}
+
+/*body {
   background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
@@ -73,3 +89,4 @@ div {
     list-style: square;
   }
 }
+*/
