--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,13 +4,13 @@
 
 <div id="top_banner">
     <% if !user_signed_in? %>
-        <a href="#">Sign up</a>
+        <%= link_to 'Sign Up', new_user_registration_path %>
         <p>|</p>
-        <a href="#">Log in</a>
+         <%= link_to 'Log In', new_user_session_path%>
     <% else %>
-        <a href="#">My Profile</a>
+        <%= link_to 'Profile', edit_user_registration_path %>
         <p>|</p>
-        <a href="#">Log out</a>
+        <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
     <% end %>
 </div>
 
@@ -18,149 +18,10 @@
 
 <div class = "nav-container">
     <div class="nav">
-        <a class="mid-child" href="#">Home</a>
-        <a class="mid-child" href="#">Map</a>
-        <a class="mid-child" href="#">Toilet Info</a>
+        <%= link_to 'Home', home_path %>
+        <%= link_to 'Map', showmap_path %>
+        <%= link_to 'Toilet Info', newbath_path %>
         <a href="#">Contact us</a>
         <div class="effect"></div>
     </div>
-<<<<<<< HEAD
-</div>
-=======
   </nav>
--->
-
-<style>
-.dropbtn {
-    padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
-    cursor: pointer;
-        border: none;
-}
-
-
-.dropdown {
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
-    position: relative;
-    display: inline-block;
-        border: none;
-}
-
-.dropdown-content {
-    z-index: 3;
-    display: none;
-    position: absolute;
-    min-width: 160px;
-        border: none;
-}
-
-.dropdown-content a {
-    text-decoration: none;
-    display: block;
-        border: none;
-}
-
-.dropdown-content a:hover {
-    border: none;
-}
-
-.dropdown:hover .dropdown-content {
-      border: none;
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-      border: none;
-}
-
-button::-moz-focus-inner {
-    border:0;
-    padding:0;
-    margin-top:-2px;
-    	margin-bottom: -2px;
-}
-
-</style>
-
-
-
-
-<br>
-<ul class="TopRight">
-      <!--
-          <div class = "myNavElementsLeft"> <li> <%= link_to 'UrineLuck', '#' %>  </li>                  </div>
-      -->
-
-          <div class= "TopRightElementsSpecial"> <li><%= link_to 'CAREERS', newbath_path %></li>         </div>
-          <div class= "TopRightElements"> <li><%= link_to 'CONTACT US', profile_path %></li>                </div>
-          <div class= "TopRightElements"> <li><%= link_to 'INVESTOR', home_path %></li>                      </div>
-          <div class= "TopRightElements"> <li><%= link_to 'NEWS', showmap_path %></li>                    </div>
-
-</ul>
-
-
-<br>
-<p></p>
-
-
-
-
-
-
-<div class = "Logo"> <h1> <%= link_to 'UrineLuck', '#' %>  </h1> </div>
-  <ul class="myNav">
-        <!--
-            <div class = "myNavElementsLeft"> <li> <%= link_to 'UrineLuck', '#' %>  </li>                  </div>
-        -->
-
-
-                    <div class= "myNavElementsRight"> <li><%= link_to 'HOME', home_path %></li>                      </div>
-
-                    <div class= "myNavElementsRight">
-                    <li>
-                    <div class="dropdown">
-                      <button class="dropbtn"> <%= link_to 'PROFILE', edit_user_registration_path %> </button>
-                      <div class="dropdown-content">
-                        <%= link_to 'Personal Settings', edit_user_registration_path %>
-                       <% if current_user.role == "admin" %>
-                           <%= link_to "Show Users", profile_path %>
-                        <% end %>
-                      </div>
-                    </div>
-                    </li>
-                    </div>
-
-                    <div class= "myNavElementsRight"> <li><%= link_to 'MAP', showmap_path %></li>                    </div>
-
-                    <div class= "myNavElementsRight">
-                    <li>
-                    <div class="dropdown">
-                      <button class="dropbtn"> <li><%= link_to 'BATHROOM', newbath_path %> </button>
-                      <div class="dropdown-content">
-                        <%= link_to 'Add A Bathroom', createbath_path %>
-                        <%= link_to "All Bathrooms", showbath_path %>
-                      </div>
-                    </div>
-                    </li>
-                    </div>
-
-
-                    <% if !user_signed_in? %>
-                    <div class= "myNavElementsLeftRight"> <li><%= link_to 'Log In', new_user_session_path%></li>         </div>
-
-                    <div class= "myNavElementsLeftRight"> <li><%= link_to 'Sign Up', new_user_registration_path %></li>  </div>
-                    <% else %>
-                    <div class= "myNavElementsLeftRight"><li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li></div>
-                    <% end %>
-  </ul>
-<p> </p>
-<!--
-<p>
-<br>
-<div class = "myNavElementsLeftRight"> <%= link_to 'For Bathroom Connoisseurs', '#' %></div>
-<br>
-<br>
-</p>
--->
->>>>>>> b8cbebfd387027908008c6db9625aec95358c129
