--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -14,6 +14,10 @@ html {
 	line-height: 1;
 }
 
+body {
+  background-image: image-url("background.jpeg")
+}
+
 /*body {
   background-color: #fff;
   color: #333;
