--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -8,8 +8,8 @@
 
 
 
-<div style='width: 100%;'>
-  <div id="map" style='width: 100%; height: 500px;'></div>
+<div style="width: 70%; margin: auto">
+  <div id="map" style="height: 500px"></div>
 </div>
 
 <script type="text/javascript">
