--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -18,6 +18,23 @@ body {
   background-image: image-url("background.jpeg")
 }
 
+/* Motto */
+#motto {
+	width:70%;
+	padding: 0.3rem;
+	margin: auto;
+	background-color: rgba(0, 0, 0, 0.8);
+	text-align: center;
+}
+
+#motto p {
+  margin: 0.3rem 0 0.3rem 0;
+	font-family: Jura;
+	font-size: 1.5rem;
+	text-shadow: none;
+	color: white;
+}
+
 /*body {
   background-color: #fff;
   color: #333;
