--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,8 +54,8 @@ body {
 }
 
 /* Navigation bar */
-.nav-container {
-	width:70%;
+#nav-container {
+	width: 70%;
 	padding: 0.5rem;
 	margin-left: auto;
 	margin-right: auto;
@@ -68,7 +68,6 @@ body {
     text-align: center;
     overflow: hidden;
     margin: 0 auto;
-    width: 70%;
     height: 30px;
     position: relative;
 }
@@ -104,7 +103,8 @@ body {
 	box-shadow: 0 1px 0 white; 
 	margin-left:-45px;
 	position: absolute;
-	left: -12.5%;-webkit-transition: 0.7s ease-in-out;
+	left: -12.5%;
+	-webkit-transition: 0.7s ease-in-out;
 	-moz-transition: 0.7s ease-in-out;
 	-o-transition: 0.7s ease-in-out;
 	-ms-transition: 0.7s ease-in-out;
