--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,23 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-/* Motto */
-#motto {
-	width:70%;
-	padding: 0.3rem;
-	margin: auto;
-	background-color: rgba(0, 0, 0, 0.8);
-	text-align: center;
-}
-
-#motto p {
-  margin: 0.3rem 0 0.3rem 0;
-	font-family: Jura;
-	font-size: 1.5rem;
-	text-shadow: none;
-	color: white;
-}
-
+/* Navigations: find & add */
 #navbox-container {
   width: 70%;
   margin-left: auto;
@@ -38,7 +22,7 @@
   position: relative;
 }
 
-.navbox h3 {
+.navbox h2 {
   color: black;
   text-shadow: 2px 2px #f4f5f0;
   margin: none;
@@ -51,98 +35,3 @@
   font-family: play;
   text-shadow: 1px 1px 4px #f4f5f0;
 }
-
-.pseudo-container {
-  margin: 2rem;
-  height: 2rem;
-}
-
-/*
-.jumbotron{
-  right:50%;
-  text-align:left
-}
-
-.MyMiddle0{
-  padding: 10px 0px 5px 0px;
-  margin: 25px 0px 5px 0px;
-  text-align: center;
-  background-color: #303030;
-
-}
-
-.MyMiddle1{
-  color: #F8F8F8;
-  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
-  text-align: center;
-  font-size: 5;
-}
-.MyMiddle2{
-  color: #F8F8F8;
-  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
-  text-align: center;
-  padding: 0px 0px 0px 0px;
-  font-style: italic;
-  font-size: 40;
-  background-color: #303030;
-}
-
-#slides{
-  margin: 0px 0px 5px 0px;
-	position: relative;
-	height: 300px;
-  width: 492px;
-	padding: 0px;
-  background-color: #303030;
-	list-style-type: none;
-}
-
-.slide{
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	width: 99%;
-	height: 99%;
-	opacity: 0;
-	z-index: 1;
-  background-color: #303030;
-
-
-	-webkit-transition: opacity 1s;
-	-moz-transition: opacity 1s;
-	-o-transition: opacity 1s;
-	transition: opacity 1s;
-}
-
-.showing{
-	opacity: 1;
-	z-index: 2;
-}
-
-
-
-/*
-non-essential styles:
-just for appearance; change whatever you want
-*/
-
-/*
-.slide{
-	font-size: 40px;
-	padding: 1px;
-	box-sizing: border-box;
-	background: #303030;
-	color: #fff;
-}
-
-.slide:nth-of-type(1){
-}
-.slide:nth-of-type(2){
-}
-.slide:nth-of-type(3){
-}
-.slide:nth-of-type(4){
-}
-.slide:nth-of-type(5){
-}
-*/
