--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,17 +6,17 @@
 
 <div id="navbox-container">
     <div class="navbox">
-        <h3>Find Nearest Toilet</h3><br>
+        <h2>Find Nearest Toilet</h2><br>
         <p>Having trouble with your urine? Or plan before something awkward happens? You can search for the nearest toilet or a toilet near any location</p>
-        <div class="pseudo-container">
+        <div style="margin:2rem; height:2rem">
             <input name="ClientSearch" placeholder="Enter a location, address, ..." title="Please enter a place name, address or postcode to find toilets in that area." type="text" value=""></input>
         </div>
         <%= link_to(image_tag("sprint.png", :size => "120x120"), root_path) %>
     </div>
     <div class="navbox">
-        <h3>Suggest Toilet</h3><br>
+        <h2>Suggest Toilet</h2><br>
         <p>If you find a toilet which is not in our database, feel free to suggest by clicking the button below. However, you must be signed in before suggesting</p>
-        <div class="pseudo-container"></div>
+        <div style="margin:2rem; height:2rem"></div>
         <%= link_to(image_tag("plus-sign.png", :size => "120x120"), createbath_path) %>
     </div>
 </div>
