--- a/app/views/baths/new.html.erb
+++ b/app/views/baths/new.html.erb
@@ -55,7 +55,7 @@
         <%= f.number_field :rating, autofocus: true %>
     </div>
   
-  <% if current_user=="admin" %>  
+  <% if isAdmin? %>  
     <%= f.submit "Create my bathroom", class: "btn btn-primary" %>
   <% else %>
     <%= f.submit "Send bathroom request", class: "btn btn-primary" %>
