--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,47 +9,47 @@
   <% if current_user.role="admin" %>
     <%= link_to "View Users in Database", profile_path %>
   <% end %>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3 well">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <%= devise_error_messages! %>
+<!--  <div class="row">-->
+<!--    <div class="col-md-6 col-md-offset-3 well">-->
+<!--      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>-->
+<!--        <%= devise_error_messages! %>-->
 
-        <div class="field">
-          <%= f.label :name %><br />
-          <%= f.text_field :name, autofocus: true %>
-        </div>
+<!--        <div class="field">-->
+<!--          <%= f.label :name %><br />-->
+<!--          <%= f.text_field :name, autofocus: true %>-->
+<!--        </div>-->
 
-        <div class="field">
-           <%= f.label :Gender%><br/>
-          <%= f.text_field :role, autofocus: true %>
-        </div>
+<!--        <div class="field">-->
+<!--           <%= f.label :Gender%><br/>-->
+<!--          <%= f.text_field :role, autofocus: true %>-->
+<!--        </div>-->
 
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true %>
-        </div>
+<!--        <div class="field">-->
+<!--          <%= f.label :email %><br />-->
+<!--          <%= f.email_field :email, autofocus: true %>-->
+<!--        </div>-->
 
-        <div class="field">
-          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-          <%= f.password_field :current_password, autocomplete: "off" %>
-        </div>
+<!--        <div class="field">-->
+<!--          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />-->
+<!--          <%= f.password_field :current_password, autocomplete: "off" %>-->
+<!--        </div>-->
 
-        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-        <% end %>
-
-
-        <div class="actions">
-          <%= f.submit "Update" %>
-        </div>
-      <% end %>
-
-      <%= link_to "Back", :back %>
-    </div>
-</div>
+<!--        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>-->
+<!--          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>-->
+<!--        <% end %>-->
 
 
-<!--
+<!--        <div class="actions">-->
+<!--          <%= f.submit "Update" %>-->
+<!--        </div>-->
+<!--      <% end %>-->
+
+<!--      <%= link_to "Back", :back %>-->
+<!--    </div>-->
+<!--</div>-->
+
+
+
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <div class="row">
