--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,8 +31,8 @@
        <%= f.radio_button :role, 'male' %>
        <%= label_tag :role, 'Male' %>
 
-       <%= f.radio_button :role, 'female' %>
-      <%= label_tag :role, 'Female' %>      
+       <%= f.radio_button :role, 'female'  %>
+      <%= f.label :role, 'Female' %>      
       </div>
       
       <div class="actions">
