--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
         <%= link_to 'Home', home_path %>
         <%= link_to 'Map', showmap_path %>
         <%= link_to 'Toilet Info', newbath_path %>
-        <a href="#">Contact us</a>
+        <%= link_to 'About Us', about_path %>
         <div class="effect"></div>
     </div>
   </nav>
