--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,24 +14,12 @@
 
 <div id="logo"><%= link_to image_tag('logo.PNG', :size => "163x100"), home_path %></div>
 
-<ul class="nav">
-    <li><%= link_to 'Home', home_path %></li>
-    <li><%= link_to 'Map', showmap_path %></li>
-    <li>
+<div class="nav-container">
+    <ul class="nav">
+        <%= link_to 'Home', home_path %></li>
+        <%= link_to 'Map', showmap_path %></li>
         <%= link_to 'Toilet Info', newbath_path %>
-<<<<<<< HEAD
-        <ul>
-            <li><%= link_to 'Add bathroom', newbath_path %></li>
-            <li><%= link_to 'Show all bathrooms', newbath_path %></li>
-            <li><%= link_to 'View bathroom requests', newbath_path %></li>
-        </ul>
-    </li>
-    <li><a href="#">About us</a></li>
-    <div class="effect"></div>
-</ul>
-=======
         <%= link_to 'About Us', about_path %>
         <div class="effect"></div>
-    </div>
-  </nav>
->>>>>>> 5b532706ad2a426181b86ff3a97ec52f1a3343da
+    </ul>
+</div>
