roll back to previous version

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,23 +54,30 @@ body {
 }
 
 /* Navigation bar */
-.nav {
-	width: 70%;
+.nav-container {
+	width:70%;
 	padding: 0.5rem;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 0;
 	border-top: groove black;
 	border-top-width: 1px;
-    position: relative;
+}
+
+.nav {
     text-align: center;
+    overflow: hidden;
+    margin: 0 auto;
+    width: 70%;
+    height: 30px;
+    position: relative;
 }
 
 .nav li {
 	display: block;
     position: relative;
     float: left;
-    width: 24%;
+    width: 25%;
     -webkit-transition: .7s;
     -moz-transition: .7s;
     -o-transition: .7s;
@@ -101,75 +108,20 @@ body {
 	height: 2px;
 	bottom: 0;
 	background: #c6342e;
+	box-shadow: 0 1px 0 white; 
 	margin-left:-45px;
 	position: absolute;
-	left: -12.5%;
-	-webkit-transition: 0.7s ease-in-out;
+	left: -12.5%;-webkit-transition: 0.7s ease-in-out;
 	-moz-transition: 0.7s ease-in-out;
 	-o-transition: 0.7s ease-in-out;
 	-ms-transition: 0.7s ease-in-out;
-	transition: 0.7s ease-in-out;
+	transition: 0.7s ease-in-out; 
 }
 
 .nav li:nth-child(1):hover ~ .effect { left: 10%; }
 .nav li:nth-child(2):hover ~ .effect { left: 34%; }
 .nav li:nth-child(3):hover ~ .effect { left: 58%; }
 .nav li:nth-child(4):hover ~ .effect { left: 82%; }
-
-.nav ul {
-    position: absolute;
-    left: -9999px;
-    padding-top: 10px;
-    opacity: 0;
-    -webkit-transition: opacity .3s linear;
-    -moz-transition: opacity .3s linear;
-    -o-transition: opacity .3s linear;
-    -ms-transition: opacity .3s linear;
-}
-
-.nav li:hover ul {
-    left: 0;
-    opacity: 1;
-    top: 30px;
-}
-
-/* if sublevel exists
-.nav ul li:hover>ul {
-    left: 150px;
-    opacity: 1;
-    top: -11px;
-    padding-left: 12px;
-    border-bottom: 0;
-    box-shadow: none;
-}
-*/
-
-.nav ul li {
-    display: block;
-    position: relative;
-    border-top: 1px solid #ccc;
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-    width: 150px;
-    text-align: justify;
-    z-index: 9;
-    background: #eee;
-    box-shadow: 3px 4px 0 rgba(0, 0, 0, .1);
-    /* if sublevel exists
-    -webkit-transition: background .3s linear;
-    -moz-transition: background .3s linear;
-    -ms-transition: background .3s linear;
-    -o-transition: background .3s linear;
-    */
-}
-
-.nav ul li a {
-	font-size: 0.8rem;
-	text-decoration: none;
-	color: #393939;
-    display: block;
-    padding: 7px 12px 7px 20px;
-}
 
 #footer {
 	margin-left: auto;
