--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,8 @@
-<!-- Begin index file
+<!-- Begin index file -->
 
 <div id="motto">
     <p>Bathroom Connoissuer? You're In Luck!</p>
+    <a href="#" style="text-decoration:none">Browse all bathrooms</a>
 </div>
 
 <div id="navbox-container">
@@ -19,4 +20,4 @@
         <div style="margin:2rem; height:2rem"></div>
         <%= link_to(image_tag("plus-sign.png", :size => "120x120"), createbath_path) %>
     </div>
-</div> -->
+</div>
