--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,10 +16,10 @@
 
 <div class="nav-container">
     <ul class="nav">
-        <%= link_to 'Home', home_path %></li>
-        <%= link_to 'Map', showmap_path %></li>
-        <%= link_to 'Toilet Info', newbath_path %>
-        <%= link_to 'About Us', about_path %>
+        <li><%= link_to 'Home', home_path %></li>
+        <li><%= link_to 'Map', showmap_path %></li>
+        <li><%= link_to 'Toilet Info', newbath_path %></li>
+        <li><%= link_to 'About Us', about_path %></li>
         <div class="effect"></div>
     </ul>
 </div>
