before switching to dylanbranch

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="motto">
     <p>Bathroom Connoissuer? You're In Luck!</p>
-    <a href="#" style="text-decoration:none">Browse all bathrooms</a>
+    <%= link_to"Browse all bathrooms", showbath_path, {:style=>"text-decoration:none"} %>
 </div>
 
 <div id="navbox-container">
