--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -58,7 +58,7 @@
         </table>
         <% end %>
         <% end %>
-       
         <% end %>
+        <%= link_to 'Edit your profile', edit_user_registration_path %>
     </div>
 </div>
