--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <p>|</p>
         <%= link_to 'Log In', new_user_session_path %>
     <% else %>
-        <%= link_to 'Profile', edit_user_registration_path %>
+        <%= link_to 'Profile', profile_path %>
         <p>|</p>
         <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
     <% end %>
