Changing fontsizes. Moved around links (createbath_path, showbath_path, etc etc)

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,14 +1,14 @@
-<h2>Resend confirmation instructions</h2>
+<p style="font-size:21px">Resend confirmation instructions</p>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="field" style="font-size:18px">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
   </div>
 
-  <div class="actions">
+  <div class="actions" style="font-size:18px">
     <%= f.submit "Resend confirmation instructions" %>
   </div>
 <% end %>
