--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,14 +1,13 @@
-<div class="Condom">
+  <p class="title">Edit <%= resource_name.to_s.humanize %></p>
 
 
-
-
-  <p> THIS IS A TEST1 </p>
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
-  <p> THIS IS A TEST2 </p>
   <% if current_user.role="admin" %>
-    <%= link_to "View Users in Database", profile_path %>
+    <div class="editABC" style="font:size=18px"> <%= link_to "View Users in Database", profile_path %>   </div>
+    </br>
+  </div>
   <% end %>
+
+
 <!--  <div class="row">-->
 <!--    <div class="col-md-6 col-md-offset-3 well">-->
 <!--      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>-->
@@ -50,9 +49,7 @@
 
 
 
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<div class="row">
+<div class="row" style="font-size: 18px">
   <div class="col-md-6 col-md-offset-3 well">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
@@ -61,6 +58,11 @@
         <%= f.label :name %><br />
         <%= f.text_field :name, autofocus: true %>
       </div>
+
+      <div class="field">
+         <%= f.label :Gender%><br/>
+       <%= f.text_field :role, autofocus: true %>
+   </div>
 
       <div class="field">
         <%= f.label :email %><br />
@@ -75,6 +77,8 @@
         <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
         <%= f.password_field :password, autocomplete: "off" %>
       </div>
+
+
 
       <div class="field">
         <%= f.label :password_confirmation %><br />
