--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,14 +1,14 @@
-<h2>Resend unlock instructions</h2>
+<p class="title">Resend unlock instructions</p>
 
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="field" style="font-size:18px">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="actions">
+  <div class="actions" style="font-size:18px">
     <%= f.submit "Resend unlock instructions" %>
   </div>
 <% end %>
